<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test Tools</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="got_root">Root: ?\nPlease tap here to check it!</string>
    <string name="check_for_root">Check root</string>
    <string name="remove_apps">Remove apps</string>
    <string name="reboot_button_text">Reboot device</string>
    <string name="power_off_device_button">Power off device</string>
    <string name="action_about">About</string>
    <string name="title_activity_remove_app_list">RemoveAppListActivity</string>
    <string name="remove_ok_gomb">Remove selected apps</string>
    <string name="got_busybox">Busybox: ?\nPlease tap here tocheck it!</string>
    <string name="remove_apps_header">Select apps to remove!</string>
    <string name="mount_system_elotte">Before start to remove apps,please tap here\nto mount system partition as read-write!</string>
    <string name="mount_system_utana">System partition successfully\nmounted as R/W</string>

</resources>
