<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_gravity="start"
        android:id="@+id/got_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/got_root"
        android:gravity="center"
        android:clickable="true"
        android:onClick="_checkRoot" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_gravity="end"
        android:id="@+id/got_busybox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/got_busybox"
        android:gravity="center"
        android:clickable="true"
        android:onClick="_checkBusybox" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp" />

    <Button
        android:id="@+id/removeAppsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_apps"
        android:onClick="_removeApps" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rebootButton"
        android:text="@string/reboot_button_text"
        android:onClick="_rebootDevice" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/powerOffDevice"
        android:text="@string/power_off_device_button"
        android:onClick="_powerOff" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp" />

    <TextView
        android:gravity="center"
        android:textSize="15sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=" CPU clock speed in real-time:" />

    <TextView
        android:id="@+id/cpu_clock_speed"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select maximum CPU frequency:"/>

                <Spinner
                    android:id="@+id/cpu_max_freq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Set selected maxinum frequency"
                    android:layout_gravity="end"
                    android:onClick="_setSelectedMaxFreqs"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select minimum CPU frequency:"/>

                <Spinner
                    android:id="@+id/cpu_min_freq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Set selected minimum frequency"
                    android:layout_gravity="end"
                    android:onClick="_setSelectedMinFreqs"/>

            </LinearLayout>
        </ScrollView>
</LinearLayout>
